--- a/locales/vn.json
+++ b/locales/vn.json
@@ -17,6 +17,14 @@
         "more": "Xem thêm...",
         "contact_me": "LIÊN HỆ",
         "subject_in_mail": "Tôi muốn thảo luận với bạn",
-        "content_in_mail": "Tôi muốn liên hệ với bạn"
+        "content_in_mail": "Tôi muốn liên hệ với bạn",
+        "portfolio_heading": "MỘT SỐ SẢN PHẨM",
+        "portfolio_content": "Dưới đây là một số dự án Front-end đã được tôi hoàn thiện",
+        "podcast_page_description": "Chào mừng bạn đến với trang Podcast, nơi bạn có thể khám phá những câu chuyện thú vị, kiến thức bổ ích và những cuộc trò chuyện truyền cảm hứng mỗi ngày.",
+        "project_info": "THÔNG TIN DỰ ÁN",
+        "project_year_info": "Năm",
+        "project_role_info": "Vai trò",
+        "portfolio_page_description": "Trình bày các dự án, kỹ năng và thành tựu của tôi trong một portfolio gọn gàng và chuyên nghiệp. Khám phá các tác phẩm của tôi và xem tôi có thể tạo ra những gì.",
+        "banking_page_description": "Một nền tảng ngân hàng hiện đại và an toàn, giúp người dùng quản lý giao dịch, tiết kiệm và theo dõi tài chính dễ dàng. Được thiết kế để mang lại sự tiện lợi, minh bạch và kiểm soát toàn diện nguồn tiền của bạn."
     }
 }
