feat(ui): completed my portfolio

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,7 @@
         "title": "Welcome",
         "description": "This is English version",
         "language": "Language",
-        "work": "Work",
+        "work": "Works",
         "about": "About",
         "home": "Home",
         "heading": "HI, I AM",
